# mopidy-ytmusic

./: .flake8  .gitignore  CHANGELOG.rst  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: release.yml
mopidy_ytmusic/: __init__.py  backend.py  command.py  ext.conf  library.py  playback.py  playlist.py  repeating_timer.py  scrobble_fe.py
tests/: test_extension.py  test_library.py
