[tool.black]
target-version = ["py37", "py38"]
line-length = 80

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
known_tests = "tests"
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,TESTS,LOCALFOLDER"

[tool.poetry]
name = "Mopidy-YTMusic"
version = "0.2.1"
description = "Mopidy extension for playling music/managing playlists in Youtube Music"
authors = ["Ozymandias (Tomas Ravinskas) <tomas.rav@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"
Mopidy = "^3.1.0"
youtube_dl = "^2021.1.1"
ytmusicapi = "^0.13.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
setuptools = "^51.0.0"
Sphinx = "^3.3.1"
dephell = "^0.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."mopidy.ext"]
ytmusic = "mopidy_ytmusic:Extension"

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}
