[tool.black]
target-version = ["py37", "py38"]
line-length = 80

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
known_tests = "tests"
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,TESTS,LOCALFOLDER"

[tool.poetry]
name = "Mopidy-YTMusic"
version = "0.3.2"
description = "Mopidy extension for playling music/managing playlists in Youtube Music"
authors = ["Ozymandias (Tomas Ravinskas) <tomas.rav@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"
Mopidy = "^3"
pytube = "^11.0.1"
ytmusicapi = "^0.19.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
setuptools = "^51.0.0"
Sphinx = "^3.3.1"
poetry2setup = "^1.0.0"
isort = "^5"
black = { version = "*", allow-prereleases = true }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."mopidy.ext"]
ytmusic = "mopidy_ytmusic:Extension"

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}
